# bot-repo

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.base.json
.github/workflows/: ci.yml
apps/web/: .env.local.example  next.config.mjs  package.json  playwright.config.ts  sentry.client.config.ts  sentry.server.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
apps/worker/: .env.example  pyproject.toml
apps/worker/src/tcabr_worker/: bridge.py  burst.py  config.py  db.py  exclusions.py  github.py  jobs.py  log.py  main.py  models.py  persist.py  pipeline.py  profile_cache.py  redis_client.py  sampler.py  scoring.py  sentry.py  weights.py
apps/worker/src/tcabr_worker/features/: __init__.py  base.py  bot_username.py  new_account.py  no_recent_commits.py  sparse_profile.py  star_burst.py  star_farmer.py  zero_social.py
apps/worker/tests/: conftest.py  test_burst.py  test_exclusions.py  test_github.py  test_health.py  test_models.py  test_persist.py  test_pipeline.py  test_profile_cache.py  test_sampler.py  test_scoring.py  test_weights.py
apps/worker/tests/fixtures/vcr_cassettes/: recent_events_octocat.yaml  repo_meta_vercel_next.yaml  stargazers_small.yaml  user_profile_octocat.yaml
apps/worker/tests/test_features/: test_bot_username.py  test_new_account.py  test_no_recent_commits.py  test_sparse_profile.py  test_star_burst.py  test_star_farmer.py  test_zero_social.py
scripts/: seed-weights.ts
supabase/: config.toml  seed.sql
supabase/migrations/: 20260416000000_init.sql  (+2 more)
(+64 files in other folders)
