[project]
name = "tcabr-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "arq>=0.26.1",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "asyncpg>=0.29.0",
  "sentry-sdk>=2.13.0",
  "structlog>=24.4.0",
  "redis>=5.0.8",
  "numpy>=1.26"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "vcrpy>=6.0.1",
  "ruff>=0.6.0",
  "mypy>=1.11.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/tcabr_worker"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
